Issue: #124 Fixed the bug where if there were no notifications, the popover would shift to be under the schedule. Now if there are no notifications the popover will say "No new notifications" and is displayed to the right. also removed the renderUserMenu since we dont have the dropdown on the navbar anymore Time: 30min

--- a/src/app/components/app.scss
+++ b/src/app/components/app.scss
@@ -521,3 +521,7 @@ hr {
   font-weight: bold;
   color: #337ab7;
 }
+
+.hover{
+  cursor: pointer;
+}
